<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="initial_score">0</string>
    <string name="three_points">+3 Points</string>
    <string name="two_points">+2 Points</string>
    <string name="free_throw">Free throw</string>
    <string name="team_b">Team B</string>
    <string name="initialscore">0</string>
    <string name="threepointer">+3 Points</string>
    <string name="twopointer">+2 Points</string>
</resources>